2009-07-17  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: emit OpenImageSucceed for non DZ tile sources

2009-07-17  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: Correctly set 'emittingMouseEvent' to
	  true/false when we receive a mouse event. Fixes some mouse
	  capture issues in drt 535

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp|h: Make the *Async methods really async, and add corresponding
	non-async methods.

	* mediaplayer.cpp: Don't allow Play while we're seeking.

	* mediaelement.cpp: When calling any of the async methods on the playlist,
	set the expected state immediately, since CurrentState is not async. Also
	allow Play/Pause/Stop if we're already in the desired state, since there might
	be another state changed pending.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaplayer.cpp|h: Emit BufferUnderflowEvent when the buffer underflows.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: Notify the decoder when a seek has completed so
	that it can clean its state properly. FillBuffers: the final buffer size
	is equal to the smallest buffer size of all the streams, not the buffer
	size of the last stream.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaplayer.cpp: Video/AudioFinished: don't do anything if the video/audio
	has already finished.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp|h: Fix IsSingleFile implementation.

	* mediaelement.cpp|h: Don't emit MediaOpened after reloading a media after
	a Stop for non-playlist media.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaplayer.cpp|h: Add a StopAudio method which stops the audio, and use
	it whenever we stop the audio. AdvanceFrame: For media with a specified
	duration stop the audio when we've reached the desired duration.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: OpenCompletedHander: Before emitting